blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  selector:
    app: blue
  ports:
  - port: 3000
    targetPort: 3000
