deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      volumes:
        - configMap:
            defaultMode: 420
            name: envoy-config-configmap
          name: envoy-config-vol
      containers:
      - name: envoy
        ports:
        - containerPort: 15006
        image: 'envoyproxy/envoy:v1.28.0'
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        args:
          - '-c'
          - /etc/envoy/envoy.yaml
          - '--log-level'
          - info
          - --drain-time-s
          - '120'
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 5
          successThreshold: 3
          timeoutSeconds: 1 
        volumeMounts:
          - mountPath: /etc/envoy
            name: envoy-config-vol
      - name: blue
        image: gcr.io/tetratelabs/color-app:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
